--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
+.primary-btn {
+    font-weight: 500;
+    font-size: 15px;
+    color: #ffffff;
+    background: #FF900E;
+    border-radius: 8px;
+    padding: 15px 18px;
+    border: 0;
+}
+
 
 /* header style */
 .header {
@@ -60,21 +70,53 @@ nav a {
     font-size: 15px;
     margin: 20px 0;
 }
-
-.explore-btn {
-    font-weight: 500;
-    font-size: 15px;
-    color: #ffffff;
-    background: #FF900E;
-    border-radius: 8px;
-    padding: 15px 18px;
-    border: 0;
-}
-.banner-img{
+.banner-img {
     display: flex;
     justify-content: center;
-    margin: 30px 160px 0 160px;
+    padding: 30px 160px;
 }
+
 .banner-img img {
-    width: 100%; 
+    width: 100%;
 }
+
+/* quick-list-banner style*/
+.quick-list-banner {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    margin: 48px 200px;
+    gap: 40px;
+}
+
+.quick-list-img {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: end;
+    gap: 15px;
+}
+
+.quick-list-img img {
+    width: 100%;
+}
+/* Our Sponspors style */
+.sponspors-img{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 160px;
+}
+.sponspors-img img{
+    width: 136px;
+}
+
+/* Footer style */
+.footer-text{
+    text-align: center;
+    background-color: rgba(255, 144, 14, 0.1);
+    margin: 20px 160px 100px 160px;
+    padding: 25px;
+    color: #727272;
+    font-weight: 300;
+    font-size: 15px;
+}
+
