--- a/style.css
+++ b/style.css
@@ -274,13 +274,18 @@ nav a {
 
 /*responsive for mobile type devise */
 @media only screen and (max-width: 600px) {
+    .primary-title {
+        font-weight: 500;
+        font-size: 30px;
+    }
+
     nav {
         padding: 28px 48px;
     }
 
     nav ul {
         flex-direction: column;
-        justify-content: flex-start;
+        gap: 5px;
     }
 
     .logo {
@@ -291,13 +296,60 @@ nav a {
         font-size: 15px;
     }
 
+    .quick-list-banner {
+        grid-template-columns: 1fr;
+        margin: 40px 25px;
+    }
+
+    .banner-img {
+        padding: 34px 25px;
+    }
+
+    .banner-info {
+        margin: 0 25px;
+    }
+
     .banner-title {
         font-size: 30px;
     }
-    .banner-info {
-        margin: 0 16px;
+
+    .features-you {
+        margin: 4px 25px;
+        grid-template-columns: 1fr;
     }
-    .banner-img {
-        padding: 34px 26px;
+
+    .features-sitebar {
+        height: 75px;
+    }
+
+    .features-you-des-part {
+        width: 90%;
+    }
+
+    .some-facts-info {
+        margin: 25px;
+    }
+
+    .some-facts-container {
+        display: flex;
+        flex-direction: column;
+        margin: 25px;
+    }
+    .some-facts-detais {
+        width: 100%;
+        height: 170px;
+        margin-top: 20px;
+    }
+    .spospors-info {
+        margin: 0 25px;
+    }
+    .sponspors-img {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap: 20px;
+        margin: 25px 25px;
+    }
+    .footer-text {
+        margin: 100px 25px 150px 25px;
     }
 }
