--- a/style.css
+++ b/style.css
@@ -256,7 +256,50 @@ nav a {
     width: 136px;
     filter: grayscale(100%);
 }
+/* Contact Section style */
+* {
+    box-sizing: border-box;
+  }
 
+  input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    margin-top: 6px;
+    margin-bottom: 16px;
+  }
+  
+  input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 10px;
+  }
+  
+  /* Create two columns that float next to eachother */
+  .column {
+    float: left;
+    width: 50%;
+    margin-top: 6px;
+    padding: 20px;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 /* Footer style */
 .footer-text {
     text-align: center;
@@ -267,11 +310,6 @@ nav a {
     font-weight: 300;
     font-size: 15px;
 }
-
-.hide {
-    display: none;
-}
-
 /*responsive for mobile type devise */
 @media only screen and (max-width: 600px) {
     .primary-title {
@@ -325,7 +363,10 @@ nav a {
     .features-you-des-part {
         width: 90%;
     }
-
+    .ten-year-btn{
+        
+        position: static;
+    }
     .some-facts-info {
         margin: 25px;
     }
@@ -335,20 +376,27 @@ nav a {
         flex-direction: column;
         margin: 25px;
     }
+
     .some-facts-detais {
         width: 100%;
         height: 170px;
         margin-top: 20px;
     }
+
     .spospors-info {
         margin: 0 25px;
     }
+
     .sponspors-img {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-row-gap: 20px;
         margin: 25px 25px;
     }
+    .column, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+      }
     .footer-text {
         margin: 100px 25px 150px 25px;
     }
