--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ nav a {
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
     border-radius: 8px;
     width: 440px;
-    height: 88px;
+    height: auto;
     padding: 19px;
     margin-top: 20px;
 }
